Fix image file extensions

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -9,7 +9,7 @@
 		<div class="col-md-4">
 			<h3><a href='#/kamlim'>Kamlim Website</a></h3>
 			<figure>
-				<img class='project-img' src='../images/icons/kamlim.jpg' alt=''/>
+				<img class='project-img' src='../images/icons/kamlim.JPG' alt=''/>
 				<figcaption>MEAN stack application with CRUD functionality</figcaption>
 			</figure>
 			<details>
@@ -37,7 +37,7 @@
 		<div class="col-md-4">
 			<h3><a href='#/space-invaders++'>Space Invaders++</a></h3>
 			<figure>
-				<img class='project-img' src='../images/icons/space-invaders++.jpg' alt=''/>
+				<img class='project-img' src='../images/icons/space-invaders++.JPG' alt=''/>
 				<figcaption>Revamped Space Invaders game written in C++ using Qt</figcaption>
 			</figure>
 			<details>
@@ -54,7 +54,7 @@
 		<div class="col-md-4">
 			<h3><a href='#/pongNET'>Pong.NET</a></h3>
 			<figure>
-				<img class='project-img' src='../images/icons/pong-net.jpg' alt=''/>
+				<img class='project-img' src='../images/icons/pong-net.JPG' alt=''/>
 				<figcaption>Cross-network Pong written in Java using multi-threading and sockets</figcaption>
 			</figure>
 			<details>
@@ -68,7 +68,7 @@
 		<div class="col-md-4">
 			<h3><a href='#/opencv-image-tracker'>OpenCV Image Tracker</a></h3>
 			<figure>
-				<img class='project-img' src='../images/icons/opencv-image-tracker.jpg' alt=''/>
+				<img class='project-img' src='../images/icons/opencv-image-tracker.JPG' alt=''/>
 				<figcaption>Image tracking script written in Python using OpenCV templating</figcaption>
 			</figure>
 			<details>
