--- a/public/templates/projects/opencv-image-tracker.html
+++ b/public/templates/projects/opencv-image-tracker.html
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 	<div style='overflow: hidden; width: 100%; height: 400px;'>
-		<img src='../images/projects/opencv-image-tracker.jpg' alt='' style='width: 100%; margin-top: -75px'/>
+		<img src='../images/projects/opencv-image-tracker.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
 		<div class='col-md-8 col-md-offset-1'>
