--- a/public/templates/projects/pongNET.html
+++ b/public/templates/projects/pongNET.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div style='overflow: hidden; width: 100%; height: 400px;'>
-		<img src='../images/projects/pong-net.jpg' alt='' style='width: 100%; margin-top: -75px'/>
+		<img src='../images/projects/pong-net.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
 		<div class='col-md-8 col-md-offset-1'>
