--- a/public/templates/projects/space-invaders++.html
+++ b/public/templates/projects/space-invaders++.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div style='overflow: hidden; width: 100%; height: 400px;'>
-		<img src='../images/projects/space-invaders++.jpg' alt='' style='width: 100%; margin-top: -50px'/>
+		<img src='../images/projects/space-invaders++.JPG' alt='' style='width: 100%; margin-top: -50px'/>
 	</div>
 	<div class='row'>
 		<div class='col-md-8 col-md-offset-1'>
