--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<!-- Favicon -->
+<link rel='shortcut icon' type='image/x-icon' href='../images/icons/favicon.ico'/>
 <!-- Bootstrap CSS -->
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' type='text/css'/>
 <!-- Lato font -->
