--- a/public/templates/projects/ml-text-analyzer.html
+++ b/public/templates/projects/ml-text-analyzer.html
@@ -10,7 +10,7 @@
 		</div>
 	</div>
 	<div style='overflow: hidden; width: 100%; height: 400px;'>
-		<img src='../images/projects/ml-text-analyzer.jpg' alt='' style='width: 100%; margin-top: -75px'/>
+		<img src='../images/projects/ml-text-analyzer.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
 		<div class='col-md-8 col-md-offset-1'>
