Configure mobile/tablet grid

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,12 +1,12 @@
 <!-- Homepage template -->
 <div class='container'>
 	<div class='row'>
-		<div class='col-md-12 page-header'>
+		<div class='col-xs-12 col-sm-12 col-md-12 page-header'>
 			<h2>Projects</h2>
 		</div>
 	</div>
 	<div class='row'>
-		<div class="col-md-4">
+		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/kamlim'>Kamlim Website</a></h3>
 			<figure>
 				<img class='project-img' src='../images/icons/kamlim.JPG' alt=''/>
@@ -20,7 +20,7 @@
 				</ul>
 			</details>
 		</div>
-		<div class="col-md-4">
+		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/ml-text-analyzer'>ML Text Analyzer</a></h3>
 			<figure>
 				<img class='project-img' src='../images/icons/ml-text-analyzer.jpg' alt=''/>
@@ -34,7 +34,7 @@
 				</ul>
 			</details>
 		</div>
-		<div class="col-md-4">
+		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/space-invaders++'>Space Invaders++</a></h3>
 			<figure>
 				<img class='project-img' src='../images/icons/space-invaders++.JPG' alt=''/>
@@ -51,7 +51,7 @@
 	</div>
 	<hr/>
 	<div class='row'>
-		<div class="col-md-4">
+		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/pongNET'>Pong.NET</a></h3>
 			<figure>
 				<img class='project-img' src='../images/icons/pong-net.JPG' alt=''/>
@@ -65,7 +65,7 @@
 				</ul>
 			</details>
 		</div>
-		<div class="col-md-4">
+		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/opencv-image-tracker'>OpenCV Image Tracker</a></h3>
 			<figure>
 				<img class='project-img' src='../images/icons/opencv-image-tracker.JPG' alt=''/>
@@ -74,12 +74,12 @@
 			<details>
 				<ul>
 					<li>Uses a reference image to track an object</li>
-					<li>Computer vision is used to highlight the object throughout the video</li>
+					<li>Computer vision is used to highlight the object throughout the video</l>
 					<li>Plots a graph of the object's x/y coordinates over time</li>
 				</ul>
 			</details>
 		</div>
-		<div class="col-md-4">
+		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/yelp-scraper'>Yelp Scraper</a></h3>
 			<figure>
 				<img class='project-img' src='../images/icons/yelp-scraper.jpg' alt=''/>
