--- a/public/templates/projects/ml-text-analyzer.html
+++ b/public/templates/projects/ml-text-analyzer.html
@@ -1,7 +1,7 @@
 <!-- ML Text Analyzer project template -->
 <div class='container'>
 	<div class='row'>
-		<div class='col-md-12 page-header'>
+		<div class='col-xs-12 col-sm-12 col-md-12 page-header'>
 			<h2>ML Text Analyzer
 				<a href='https://github.com/matthewachan/ml-text-analyzer'>
 					<img src='https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png' alt='' class='glyphicon glyphicon-github' style='width: 25px; height: 25px; margin-top: -8px;'/>
@@ -13,7 +13,7 @@
 		<img src='../images/projects/ml-text-analyzer.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
-		<div class='col-md-8 col-md-offset-1'>
+		<div class='col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-1'>
 			<img src='' alt=''/>
 			<h3>Description</h3>
 			<p style='padding-left: 22px'>
