--- a/public/templates/projects/pongNET.html
+++ b/public/templates/projects/pongNET.html
@@ -2,7 +2,7 @@
 <!-- Pong.NET project template -->
 <div class='container'>
 	<div class='row'>
-		<div class='col-md-12 page-header'>
+		<div class='col-xs-12 col-sm-12 col-md-12 page-header'>
 			<h2>
 				Pong.NET
 				<a href='https://github.com/matthewachan/Pong.NET'>
@@ -15,7 +15,7 @@
 		<img src='../images/projects/pong-net.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
-		<div class='col-md-8 col-md-offset-1'>
+		<div class='col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-1'>
 			<h3>Description</h3>
 			<p style='padding-left: 22px'>
 				This application is an online version of the classic 2-player game, Pong, played over the network by providing an IP address. The first person to start the program will act as the "server" and the second person to start the program will act as the "client" and must specify the server's IP address in order to play against the first person. Note that the default setting for this game is set up so that the client attempts to connect to the localhost (i.e. IP Address: 127.0.0.1). In order to play this game online with someone else, change the string "localhost" under PhysicsThread's startClient() method in NetworkPong.java to the IP address of the server you wish to connect to.
