--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -1,15 +1,15 @@
 <!-- Contact Info template -->
 <div class='container'>
 	<div class='row'>
-		<div class='col-md-12 page-header'>
+		<div class='col-xs-12 col-sm-12 col-md-12 page-header'>
 			<h2>Contact Info</h2>
 		</div>
 	</div>
 	<div class='row'>
-		<div class='col-md-4'>
+		<div class='col-xs-12 col-sm-12 col-md-4'>
 			<div class='bio'>
 				<img src='../images/icons/portrait.jpg' alt='Portrait photo'/>
-				<div class='text-left'>
+				<div class='text-left col-xs-offset-3 col-md-offset-0'>
 					<ul style='list-style: none'>
 						<li style='margin-bottom: 7px'><span class='glyphicon glyphicon-phone'></span> Phone: (610) 500-3292</li>
 						<li style='margin-bottom: 7px'><a href='mailto:matthew.a.chan@gmail.com'><span class='glyphicon glyphicon-envelope'></span> Email: matthew.a.chan@gmail.com</a></li>
@@ -19,13 +19,13 @@
 				</div>
 			</div>
 		</div>
-		<div class='col-md-7 col-md-offset-1'>
+		<div class='col-xs-11 col-xs-offset-1 col-sm-9 col-sm-offset-1 col-md-7 col-md-offset-1'>
 			<div class='row'>
 				<h3>Current Position</h3>
-				<div class='col-md-1'>
+				<div class='col-xs-2 col-sm-2 col-md-1'>
 					<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Intel-logo.svg/1280px-Intel-logo.svg.png' alt='' style='width: 100px; height: 70px'/>
 				</div>
-				<div class='col-md-10'>
+				<div class='col-xs-9 col-sm-10 col-md-10'>
 					<ul style='list-style: none; font-size: 22px; margin-left: 22px; padding-top: 7px'>
 						<li>Software Engineer at Intel Corporation</li>
 						<li>Folsom, CA</li>
@@ -34,10 +34,10 @@
 			</div>
 			<div class='row'>
 				<h3>Education</h3>
-				<div class='col-md-1'>
+				<div class='col-xs-2 col-sm-2 col-md-1'>
 					<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/The_University_of_California_UCLA.svg/2000px-The_University_of_California_UCLA.svg.png' alt='' style='width: 100px; height: 100px'/>
 				</div>
-				<div class='col-md-10'>
+				<div class='col-xs-9 col-sm-10 col-md-10'>
 					<ul style='list-style: none; font-size: 20px; margin-left: 22px; padding-top: 11px'>
 						<li>University of California, Los Angeles</li>
 						<li>Economics B.A., Specializing in Computer Science</li>
