--- a/public/templates/projects/space-invaders++.html
+++ b/public/templates/projects/space-invaders++.html
@@ -2,7 +2,7 @@
 <!-- Space Invaders++ project template -->
 <div class='container'>
 	<div class='row'>
-		<div class='col-md-12 page-header'>
+		<div class='col-xs-12 col-sm-12 col-md-12 page-header'>
 			<h2>
 				Space Invaders++
 				<a href='https://github.com/matthewachan/space-invaders'>
@@ -15,7 +15,7 @@
 		<img src='../images/projects/space-invaders++.jpg' alt='' style='width: 100%; margin-top: -50px'/>
 	</div>
 	<div class='row'>
-		<div class='col-md-8 col-md-offset-1'>
+		<div class='col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-1'>
 			<img src='' alt=''/>
 			<h3>Description</h3>
 			<p style='padding-left: 22px'>
