--- a/public/templates/projects/yelp-scraper.html
+++ b/public/templates/projects/yelp-scraper.html
@@ -1,7 +1,7 @@
 <!-- Yelp Scraper project template -->
 <div class='container'>
 	<div class='row'>
-		<div class='col-md-12 page-header'>
+		<div class='col-xs-12 col-sm-12 col-md-12 page-header'>
 			<h2>
 				Yelp Scraper
 				<a href='https://github.com/matthewachan/Yelp-Scraper'>
@@ -14,7 +14,7 @@
 		<img src='../images/projects/yelp-scraper.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
-		<div class='col-md-8 col-md-offset-1'>
+		<div class='col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-1'>
 			<img src='' alt=''/>
 			<h3>Description</h3>
 			<p style='padding-left: 22px'>
