--- a/public/templates/resume.html
+++ b/public/templates/resume.html
@@ -6,8 +6,8 @@
 		</div>
 	</div>
 	<div class='row'>
-		<div class='col-md-12'>
-			<embed src='../pdfs/resume.pdf' alt='My Resume' type='application/pdf' width='100%' height='100%'/>
+		<div class='col-xs-12 col-sm-12 col-md-12'>
+			<embed src='../pdfs/resume.pdf' alt='My Resume' type='application/pdf' width='100%' height='800px'/>
 		</div>
 	</div>
 </div>
