--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,75 +1,94 @@
-<!-- Favicon -->
-<link rel='shortcut icon' type='image/x-icon' href='../images/icons/favicon.ico'/>
-<!-- Bootstrap CSS -->
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' type='text/css'/>
-<!-- Lato font -->
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,200,300,400,700,900' type='text/css'/>
-<!-- jQuery -->
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js' type='text/javascript'></script>
-<!-- Bootstrap JS -->
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js' type='text/javascript'></script>
-<!-- AngularJS -->
-<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js' type='text/javascript'></script>
-<!-- AngularJS UI Router -->
-<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js' type='text/javascript'></script>
-<!-- Custom AngularJS App -->
-<script src='../javascripts/siteApp.js' type='text/javascript'></script>
-<!-- Custom CSS -->
-<link rel='stylesheet' href='../stylesheets/style.css' type='text/css'/>
+<!doctype html>
+<html lang='en-US'>
+	<head>
+		<title>Matthew A Chan</title>
+		<meta charset='utf-8'/>
+		<!-- Website description -->
+		<meta name='description' content='Personal website for Matthew A Chan containing information about his projects, education, and work experience.'/>
+		<meta name='author' content='Matthew Chan'/>
+		<meta name='keywords' content='matthew, chan, software, engineer, ucla, intel'/>
+		<meta http-equiv='X-UA-Compatible' content='IE=edge'/>
+		<!-- Favicon -->
+		<link rel='shortcut icon' type='image/x-icon' href='../images/icons/favicon.ico'/>
+		<!-- Bootstrap CSS -->
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' type='text/css'/>
+		<!-- Lato font -->
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,200,300,400,700,900' type='text/css'/>
+		<!-- jQuery -->
+		<script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js' type='text/javascript'></script>
+		<!-- Bootstrap JS -->
+		<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js' type='text/javascript'></script>
+		<!-- AngularJS -->
+		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js' type='text/javascript'></script>
+		<!-- AngularJS UI Router -->
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js' type='text/javascript'></script>
+		<!-- Custom AngularJS App -->
+		<script src='../javascripts/siteApp.js' type='text/javascript'></script>
+		<!-- Custom CSS -->
+		<link rel='stylesheet' href='../stylesheets/style.css' type='text/css'/>
+	</head>
+	<body ng-app='siteApp'>
+		<!-- Navigation Bar -->
+		<nav class='navbar navbar-inverse navbar-fixed-top'>
+			<div class='container-fluid'>
 
-<body ng-app='siteApp'>
-	<!-- Navigation Bar -->
-	<nav class='navbar navbar-inverse navbar-fixed-top'>
-		<div class='container-fluid'>
-			<div class='navbar-brand'>
-				<a href="#/home">{ m }</a>
-			</div>
-			<ul class='nav navbar-nav navbar-right'>
-				<li><a href="#/home">Home</a></li>
-				<li><a class='dropdown-toggle' data-toggle='dropdown' href="">Portfolio<span class='caret'></span></a>
-					<ul class='dropdown-menu inverse-dropdown'>
-						<li><a href="#/kamlim">Kamlim Website</a></li>
-						<li><a href="#/ml-text-analyzer">ML Text Analyzer</a></li>
-						<li><a href="#/space-invaders++">Space Invaders++</a></li>
-						<li><a href="#/pongNET">Pong.NET</a></li>
-						<li><a href="#/opencv-image-tracker">OpenCV Image Tracker</a></li>
-						<li><a href="#/yelp-scraper">Yelp Scraper</a></li>
+				<div class="navbar-header">
+			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#siteNav">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span> 
+			      </button>
+			      <a class="navbar-brand" href="#/home">{ m }</a>
+			    </div>
+			    <div class="collapse navbar-collapse" id='siteNav'>
+					<ul class='nav navbar-nav navbar-right'>
+						<li><a href="#/home">Home</a></li>
+						<li><a class='dropdown-toggle' data-toggle='dropdown' href="">Portfolio<span class='caret'></span></a>
+							<ul class='dropdown-menu inverse-dropdown'>
+								<li><a href="#/kamlim">Kamlim Website</a></li>
+								<li><a href="#/ml-text-analyzer">ML Text Analyzer</a></li>
+								<li><a href="#/space-invaders++">Space Invaders++</a></li>
+								<li><a href="#/pongNET">Pong.NET</a></li>
+								<li><a href="#/opencv-image-tracker">OpenCV Image Tracker</a></li>
+								<li><a href="#/yelp-scraper">Yelp Scraper</a></li>
+							</ul>
+						</li>
+						<li><a href="#/resume">Resume</a></li>
+						<li><a href="#/contact">Contact Info</a></li>
 					</ul>
-				</li>
-				<li><a href="#/resume">Resume</a></li>
-				<li><a href="#/contact">Contact Info</a></li>
-			</ul>
-		</div>
-	</nav>
-
-	<!-- Header -->
-	<div class='' style='height: 300px' >
-		<div style='overflow: hidden; position: absolute; width: 100%; height: 300px;'>
-			<img src='https://tm-prod.global.ssl.fastly.net/uploaded/attachments/18595.png?v=84cadc0e69d39dbeebe53507df630ef8' alt='Background image' class='blur' style='width: 100%;'/>
-		</div>
-		<div class='col-md-4 col-md-offset-4' style='position: relative; margin-top: 55px; color: black'>
-			<h1 class='text-center' style='font-size: 55px'>Matthew Chan</h1>
-			<hr/>
-			<h2 class='text-center' style='font-size: 40px'>Software Engineer</h2>
-		</div>
-	</div>
-
-	<!-- Inject template here -->
-	<div ui-view></div>
-
-	<!-- Footer -->
-	<div class='container'>
-		<div class='row'>
-			<footer>
-				<div style='position: relative'>
-					<a href='' title='(610) 500-3292'><span class='glyphicon glyphicon-phone'></span></a>
-					<a href='mailto:matthew.a.chan@gmail.com'><span class='glyphicon glyphicon-envelope'></span></a>
-					<a href='https://www.github.com/matthewachan'><img src='https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png' alt='' class='glyphicon glyphicon-github' style='width: 15px; height: 15px; margin-top: -8px;'/></a>
-					<a href='https://www.linkedin.com/in/matthewachan'><img src='https://image.freepik.com/free-icon/linkedin-logo_318-50643.png' alt='LinkedIn logo' class='glyphicon glyphicon-linkedin' style='width: 15px; height: 15px; margin-top: -8px;'/></a>
-					<cite class='pull-right'>&copy; 2016</cite>
 				</div>
-			</footer>
-		</div>
-	</div>
 
-</body>
+			</div>
+		</nav>
+
+		<!-- Header -->
+		<div class='' style='height: 300px' >
+			<div style='overflow: hidden; position: absolute; width: 100%; height: 300px;'>
+				<img src='https://tm-prod.global.ssl.fastly.net/uploaded/attachments/18595.png?v=84cadc0e69d39dbeebe53507df630ef8' alt='Background image' class='blur' style='width: 100%;'/>
+			</div>
+			<div class='col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4' style='position: relative; margin-top: 55px; color: black'>
+				<h1 class='text-center' style='font-size: 55px'>Matthew Chan</h1>
+				<hr/>
+				<h2 class='text-center' style='font-size: 40px'>Software Engineer</h2>
+			</div>
+		</div>
+
+		<!-- Inject template here -->
+		<div ui-view></div>
+
+		<!-- Footer -->
+		<div class='container'>
+			<div class='row'>
+				<footer class='col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1'>
+					<div style='position: relative'>
+						<a href='' title='(610) 500-3292'><span class='glyphicon glyphicon-phone'></span></a>
+						<a href='mailto:matthew.a.chan@gmail.com'><span class='glyphicon glyphicon-envelope'></span></a>
+						<a href='https://www.github.com/matthewachan'><img src='https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png' alt='' class='glyphicon glyphicon-github' style='width: 15px; height: 15px; margin-top: -8px;'/></a>
+						<a href='https://www.linkedin.com/in/matthewachan'><img src='https://image.freepik.com/free-icon/linkedin-logo_318-50643.png' alt='LinkedIn logo' class='glyphicon glyphicon-linkedin' style='width: 15px; height: 15px; margin-top: -8px;'/></a>
+						<cite class='pull-right'>&copy; 2016</cite>
+					</div>
+				</footer>
+			</div>
+		</div>
+	</body>
+</html>
