--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
 		<meta name='author' content='Matthew Chan'/>
 		<meta name='keywords' content='matthew, chan, software, engineer, ucla, intel'/>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'/>
+		<!-- Viewport -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 		<!-- Favicon -->
 		<link rel='shortcut icon' type='image/x-icon' href='../images/icons/favicon.ico'/>
 		<!-- Bootstrap CSS -->
@@ -63,8 +65,8 @@
 
 		<!-- Header -->
 		<div class='' style='height: 300px' >
-			<div style='overflow: hidden; position: absolute; width: 100%; height: 300px;'>
-				<img src='https://tm-prod.global.ssl.fastly.net/uploaded/attachments/18595.png?v=84cadc0e69d39dbeebe53507df630ef8' alt='Background image' class='blur' style='width: 100%;'/>
+			<div style='overflow: hidden; position: absolute; width: 100%; height: 45%;'>
+				<img src='https://tm-prod.global.ssl.fastly.net/uploaded/attachments/18595.png?v=84cadc0e69d39dbeebe53507df630ef8' alt='Background image' class='blur' style='width: 100%; height: 100%'/>
 			</div>
 			<div class='col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4' style='position: relative; margin-top: 55px; color: black'>
 				<h1 class='text-center' style='font-size: 55px'>Matthew Chan</h1>
@@ -79,7 +81,7 @@
 		<!-- Footer -->
 		<div class='container'>
 			<div class='row'>
-				<footer class='col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1'>
+				<footer class='col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1'>
 					<div style='position: relative'>
 						<a href='' title='(610) 500-3292'><span class='glyphicon glyphicon-phone'></span></a>
 						<a href='mailto:matthew.a.chan@gmail.com'><span class='glyphicon glyphicon-envelope'></span></a>
