--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ html, body {
 	background: white;
 	font: 300 16px 'Lato', 'Open Sans', Helvetica, Arial, sans-serif;
 	height: 100%;
+	min-height: 100%;
 	padding-top: 25px;
 }
 .project-img {
