--- a/public/templates/resume.html
+++ b/public/templates/resume.html
@@ -6,8 +6,12 @@
 		</div>
 	</div>
 	<div class='row'>
-		<div class='col-xs-12 col-sm-12 col-md-12'>
-			<embed src='../pdfs/resume.pdf' alt='My Resume' type='application/pdf' width='100%' height='800px'/>
+		<div class='col-xs-12 col-sm-12 col-md-12' style='height: 100%'>
+			<object data="../pdfs/resume.pdf" type="application/pdf" width="100%" style='min-height: 600px; max-height: 800px'>
+			    <p>It appears you don't have a PDF plugin for this browser.
+			    	<a href="../pdfs/resume.pdf">Click here to download the PDF file.</a>
+			    </p>
+			</object>
 		</div>
 	</div>
 </div>
