--- a/public/templates/projects/kamlim.html
+++ b/public/templates/projects/kamlim.html
@@ -9,7 +9,7 @@
 			</h2>
 		</div>
 	</div>
-	<div style='overflow: hidden; width: 100%; height: 400px;'>
+	<div style='overflow: hidden; width: 100%; height: 30%;'>
 		<img src='../images/projects/kamlim.JPG' alt='' style='width: 100%; margin-top: -50px'/>
 	</div>
 	<div class='row'>
