--- a/public/templates/projects/opencv-image-tracker.html
+++ b/public/templates/projects/opencv-image-tracker.html
@@ -10,7 +10,7 @@
 			</h2>
 		</div>
 	</div> 
-	<div style='overflow: hidden; width: 100%; height: 400px;'>
+	<div style='overflow: hidden; width: 100%; height: 30%;'>
 		<img src='../images/projects/opencv-image-tracker.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
