--- a/public/templates/projects/pongNET.html
+++ b/public/templates/projects/pongNET.html
@@ -11,7 +11,7 @@
 			</h2>
 		</div>
 	</div>
-	<div style='overflow: hidden; width: 100%; height: 400px;'>
+	<div style='overflow: hidden; width: 100%; height: 30%;'>
 		<img src='../images/projects/pong-net.JPG' alt='' style='width: 100%; margin-top: -75px'/>
 	</div>
 	<div class='row'>
