--- a/public/templates/projects/space-invaders++.html
+++ b/public/templates/projects/space-invaders++.html
@@ -11,7 +11,7 @@
 			</h2>
 		</div>
 	</div>
-	<div style='overflow: hidden; width: 100%; height: 400px;'>
+	<div style='overflow: hidden; width: 100%; height: 30%;'>
 		<img src='../images/projects/space-invaders++.jpg' alt='' style='width: 100%; margin-top: -50px'/>
 	</div>
 	<div class='row'>
