--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 		<!-- Website description -->
 		<meta name='description' content='Personal website for Matthew A Chan containing information about his projects, education, and work experience.'/>
 		<meta name='author' content='Matthew Chan'/>
-		<meta name='keywords' content='matthew, chan, software, engineer, ucla, intel'/>
+		<meta name='keywords' content='matthew, a, albert, chan, software, engineer, ucla, intel'/>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'/>
 		<!-- Viewport -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
