--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,9 @@ html, body {
 details:hover {
 	cursor: pointer;
 }
+details ul {
+	cursor: default;
+}
 figcaption {
 	display: inline-block;
 	width: 175px;
