Fix image blur and commenting

--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -14,7 +14,7 @@
 						<li style='margin-bottom: 7px'><span class='glyphicon glyphicon-phone'></span> Phone: (610) 500-3292</li>
 						<li style='margin-bottom: 7px'><a href='mailto:matthew.a.chan@gmail.com'><span class='glyphicon glyphicon-envelope'></span> Email: matthew.a.chan@gmail.com</a></li>
 						<li><a href='https://github.com/matthewachan'><img src='https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png' alt='GitHub logo' class='glyphicon glyphicon-github' style='width: 15px; height: 15px; margin-top: -2px;'/> GitHub: matthewachan</a></li>
-						<li><a href='https://www.linkedin.com/in/matthewachan'><img src='https://image.freepik.com/free-icon/linkedin-logo_318-50643.png' alt='LinkedIn logo' class='glyphicon glyphicon-linkedin' style='width: 15px; height: 15px; margin-top: -2px;'/> LinkedIn: Matthew A Chan</a></li>
+						<li><a href='https://www.linkedin.com/in/matthewachan'><img src='https://image.freepik.com/free-icon/linkedin-logo_318-50643.png' alt='LinkedIn logo' class='glyphicon glyphicon-linkedin' style='width: 15px; height: 15px; margin-top: -2px;'/> LinkedIn: Matthew A. Chan</a></li>
 					</ul>
 				</div>
 			</div>
