--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+/* General page styles */
 html, body {
 	background: white;
 	font: 300 16px 'Lato', 'Open Sans', Helvetica, Arial, sans-serif;
@@ -5,28 +6,42 @@ html, body {
 	min-height: 100%;
 	padding-top: 25px;
 }
+/* Blur an image */
+.blur {
+	filter: blur(5px);
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px); 
+	-o-filter: blur(5px); 
+	-ms-filter: blur(5px); 
+}
+/* Settings for project icons */
 .project-img {
 	width: 150px;
 	height: 150px;
 	margin-right: 11px;
 	margin-bottom: 11px;
 }
+/* Captions for project icons */
+figcaption {
+	display: inline-block;
+	width: 175px;
+}
+/* Expandable details for each project */
 details:hover {
 	cursor: pointer;
 }
 details ul {
 	cursor: default;
 }
-figcaption {
-	display: inline-block;
-	width: 175px;
-}
+/* Row styling */
 .row {
 	margin-bottom: 22px;
 }
+/* Clickable glyphicons */ 
 .glyphicon-phone, .glyphicon-envelope, .glyphicon-github, .glyphicon-linkedin {
 	cursor: pointer;
 }
+/* Remove link underlines */
 a {
 	color: black;
 }
@@ -39,16 +54,10 @@ nav a {
 nav a:hover, nav a:visited {
 	color: white;
 }
-.blur {
-	-webkit-filter: blur(5px);
-	filter: blur(5px);
-	-moz-filter: blur(5px); 
-	-o-filter: blur(5px); 
-	-ms-filter: blur(5px); 
-}
 .dropdown-menu li a {
 	color: black;
 }
+/* Contact card styling */
 .bio {
   border: 1px solid #888;
   border-radius: 5px;
@@ -64,10 +73,10 @@ nav a:hover, nav a:visited {
   border: 1px solid #888;
   margin: -66px 0 5px 0;
 }
-
 .bio ul li {
 	margin-bottom: 4px;
 }
+/* Footer styling */
 footer a {
 	margin-right: 33px;
 }
