--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,11 +1,14 @@
 <!-- Homepage template -->
 <div class='container'>
 	<div class='row'>
+
 		<div class='col-xs-12 col-sm-12 col-md-12 page-header'>
 			<h2>Projects</h2>
 		</div>
 	</div>
+
 	<div class='row'>
+		<!-- Kamlim Project -->
 		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/kamlim'>Kamlim Website</a></h3>
 			<figure>
@@ -20,6 +23,7 @@
 				</ul>
 			</details>
 		</div>
+		<!-- ML Text Analyzer Project -->
 		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/ml-text-analyzer'>ML Text Analyzer</a></h3>
 			<figure>
@@ -34,6 +38,7 @@
 				</ul>
 			</details>
 		</div>
+		<!-- Space Invaders++ Project -->
 		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/space-invaders++'>Space Invaders++</a></h3>
 			<figure>
@@ -49,8 +54,12 @@
 			</details>
 		</div>
 	</div>
+	
+	<!-- Divider -->
 	<hr/>
+
 	<div class='row'>
+		<!-- Pong.NET Project -->
 		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/pongNET'>Pong.NET</a></h3>
 			<figure>
@@ -65,6 +74,7 @@
 				</ul>
 			</details>
 		</div>
+		<!-- OpenCV Image Tracker Project -->
 		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/opencv-image-tracker'>OpenCV Image Tracker</a></h3>
 			<figure>
@@ -79,6 +89,7 @@
 				</ul>
 			</details>
 		</div>
+		<!-- Yelp Scraper Project -->
 		<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
 			<h3><a href='#/yelp-scraper'>Yelp Scraper</a></h3>
 			<figure>
@@ -94,5 +105,7 @@
 			</details>
 		</div>
 	</div>
+
 	<hr/>
+	
 </div>
