--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,25 @@
 <!doctype html>
 <html lang='en-US'>
 	<head>
-		<title>Matthew A Chan</title>
+		<title>Matthew A. Chan</title>
+		
+		<!-- Website Info -->
 		<meta charset='utf-8'/>
-		<!-- Website description -->
 		<meta name='description' content='Personal website for Matthew A Chan containing information about his projects, education, and work experience.'/>
 		<meta name='author' content='Matthew Chan'/>
 		<meta name='keywords' content='matthew, a, albert, chan, software, engineer, ucla, intel'/>
 		<meta http-equiv='X-UA-Compatible' content='IE=edge'/>
-		<!-- Viewport -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+
 		<!-- Favicon -->
 		<link rel='shortcut icon' type='image/x-icon' href='../images/icons/favicon.ico'/>
 		<!-- Bootstrap CSS -->
 		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' type='text/css'/>
 		<!-- Lato font -->
 		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,200,300,400,700,900' type='text/css'/>
+		<!-- Custom CSS -->
+		<link rel='stylesheet' href='../stylesheets/style.css' type='text/css'/>
+
 		<!-- jQuery -->
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js' type='text/javascript'></script>
 		<!-- Bootstrap JS -->
@@ -25,10 +29,9 @@
 		<!-- AngularJS UI Router -->
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js' type='text/javascript'></script>
 		<!-- Custom AngularJS App -->
-		<script src='../javascripts/siteApp.js' type='text/javascript'></script>
-		<!-- Custom CSS -->
-		<link rel='stylesheet' href='../stylesheets/style.css' type='text/css'/>
+		<script src='../javascripts/siteApp.js' type='text/javascript'></script>		
 	</head>
+
 	<body ng-app='siteApp'>
 		<!-- Navigation Bar -->
 		<nav class='navbar navbar-inverse navbar-fixed-top'>
@@ -64,12 +67,12 @@
 		</nav>
 
 		<!-- Header -->
-		<div class='' style='height: 300px' >
-			<div style='overflow: hidden; position: absolute; width: 100%; height: 45%;'>
-				<img src='https://tm-prod.global.ssl.fastly.net/uploaded/attachments/18595.png?v=84cadc0e69d39dbeebe53507df630ef8' alt='Background image' class='blur' style='width: 100%; height: 100%'/>
+		<div class='' style='height: 35%'>
+			<div class='blur' style='overflow: hidden; position: absolute; width: 100%; height: 35%'>
+				<img src='https://tm-prod.global.ssl.fastly.net/uploaded/attachments/18595.png?v=84cadc0e69d39dbeebe53507df630ef8' alt='Background image'style='width: 100%; min-height: 100%'/>
 			</div>
 			<div class='col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4' style='position: relative; margin-top: 55px; color: black'>
-				<h1 class='text-center' style='font-size: 55px'>Matthew Chan</h1>
+				<h1 class='text-center' style='font-size: 55px'>Matthew A. Chan</h1>
 				<hr/>
 				<h2 class='text-center' style='font-size: 40px'>Software Engineer</h2>
 			</div>
@@ -85,8 +88,12 @@
 					<div style='position: relative'>
 						<a href='' title='(610) 500-3292'><span class='glyphicon glyphicon-phone'></span></a>
 						<a href='mailto:matthew.a.chan@gmail.com'><span class='glyphicon glyphicon-envelope'></span></a>
-						<a href='https://www.github.com/matthewachan'><img src='https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png' alt='' class='glyphicon glyphicon-github' style='width: 15px; height: 15px; margin-top: -8px;'/></a>
-						<a href='https://www.linkedin.com/in/matthewachan'><img src='https://image.freepik.com/free-icon/linkedin-logo_318-50643.png' alt='LinkedIn logo' class='glyphicon glyphicon-linkedin' style='width: 15px; height: 15px; margin-top: -8px;'/></a>
+						<a href='https://www.github.com/matthewachan'>
+							<img src='https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png' alt='' class='glyphicon glyphicon-github' style='width: 15px; height: 15px; margin-top: -8px;'/>
+						</a>
+						<a href='https://www.linkedin.com/in/matthewachan'>
+							<img src='https://image.freepik.com/free-icon/linkedin-logo_318-50643.png' alt='LinkedIn logo' class='glyphicon glyphicon-linkedin' style='width: 15px; height: 15px; margin-top: -8px;'/>
+						</a>
 						<cite class='pull-right'>&copy; 2016</cite>
 					</div>
 				</footer>
